compile.log
In file included from main.c:54:
supervisor.c: In function ‘startsupervisorserver’:
supervisor.c:283:66: error: incompatible type for argument 4 of ‘pthread_create’
  283 |   errno = pthread_create(&srv.thread, NULL, &supervisor_handler, srv);
      |                                                                  ^~~
      |                                                                  |
      |                                                                  supvsr_server
In file included from main.c:13:
/usr/include/pthread.h:205:45: note: expected ‘void * restrict’ but argument is of type ‘supvsr_server’
  205 |                            void *__restrict __arg) __THROWNL __nonnull ((1, 3));
      |                            ~~~~~~~~~~~~~~~~~^~~~~
supervisor.c: In function ‘startassupervisor’:
supervisor.c:291:3: error: unknown type name ‘lcodebuf’
  291 |   lcodebuf code;
      |   ^~~~~~~~
supervisor.c:295:27: error: ‘AT_CWD’ undeclared (first use in this function); did you mean ‘AT_FDCWD’?
  295 |   bargs.srcfd = open_tree(AT_CWD, args.src, OPEN_TREE_CLONE);
      |                           ^~~~~~
      |                           AT_FDCWD
supervisor.c:295:27: note: each undeclared identifier is reported only once for each function it appears in
supervisor.c:295:39: error: ‘args’ is a pointer; did you mean to use ‘->’?
  295 |   bargs.srcfd = open_tree(AT_CWD, args.src, OPEN_TREE_CLONE);
      |                                       ^
      |                                       ->
supervisor.c:299:30: error: ‘args’ is a pointer; did you mean to use ‘->’?
  299 |   strcpy(bargs.destpath, args.dest);
      |                              ^
      |                              ->
supervisor.c:299:15: warning: passing argument 1 of ‘strcpy’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  299 |   strcpy(bargs.destpath, args.dest);
      |          ~~~~~^~~~~~~~~
In file included from stb_ds.h:395,
                 from main.c:15:
/usr/include/string.h:141:39: note: expected ‘char * restrict’ but argument is of type ‘const char *’
  141 | extern char *strcpy (char *__restrict __dest, const char *__restrict __src)
      |                      ~~~~~~~~~~~~~~~~~^~~~~~
supervisor.c:300:27: error: ‘args’ is a pointer; did you mean to use ‘->’?
  300 |   bargs.code = openat(args.src, "./build.lua");
      |                           ^
      |                           ->
supervisor.c:300:16: error: too few arguments to function ‘openat’
  300 |   bargs.code = openat(args.src, "./build.lua");
      |                ^~~~~~
In file included from /usr/include/x86_64-linux-gnu/sys/mount.h:24,
                 from main.c:24:
/usr/include/fcntl.h:233:12: note: declared here
  233 | extern int openat (int __fd, const char *__file, int __oflag, ...)
      |            ^~~~~~
main.c: At top level:
main.c:55:10: fatal error: worker.c: No such file or directory
   55 | #include "worker.c"
      |          ^~~~~~~~~~
compilation terminated.
